--- a/src/etools/applications/field_monitoring/fm_settings/locale/fr/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/fm_settings/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-05-27 10:19+0000\n"
+"POT-Creation-Date: 2022-07-18 09:09+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -20,27 +20,27 @@ msgstr ""
 
 #: admin.py:39 models.py:46 models.py:103
 msgid "Methods"
-msgstr ""
+msgstr "Méthodes"
 
 #: export/renderers.py:14
 msgid "Site ID"
-msgstr ""
+msgstr "ID du Site"
 
 #: export/renderers.py:20
 msgid "Admin {} - Name"
-msgstr ""
+msgstr "Admin {} - Nom"
 
 #: export/renderers.py:21
 msgid "Admin {} - Type"
-msgstr ""
+msgstr "Admin {} - Type"
 
 #: export/renderers.py:22
 msgid "Admin {} - Pcode"
-msgstr ""
+msgstr "Admin {} - Pcode"
 
 #: export/renderers.py:26 models.py:245
 msgid "Site"
-msgstr ""
+msgstr "Site"
 
 #: export/renderers.py:27
 msgid "Lat"
@@ -48,216 +48,216 @@ msgstr ""
 
 #: export/renderers.py:28
 msgid "Long"
-msgstr ""
+msgstr "Long"
 
 #: export/renderers.py:29 models.py:189 serializers.py:130
 msgid "Active"
-msgstr ""
+msgstr "Actif"
 
 #: export/renderers.py:40
 msgid "Related To"
-msgstr ""
+msgstr "Relatif à"
 
 #: export/renderers.py:41 models.py:39 models.py:54 models.py:180
 msgid "Name"
-msgstr ""
+msgstr "Nom"
 
 #: export/renderers.py:42
 msgid "Issue for Attention"
-msgstr ""
+msgstr "Sujet d'attention"
 
 #: export/renderers.py:43 serializers.py:132
 msgid "Status"
-msgstr ""
+msgstr "Statut"
 
 #: export/renderers.py:44 models.py:251 views.py:198
 msgid "Attachments"
-msgstr ""
+msgstr "Pièces jointes"
 
 #: models.py:22 views.py:73
 msgid "Global Attachments"
-msgstr ""
+msgstr "Pièces jointes globales"
 
 #: models.py:25
 msgid "Global Config"
-msgstr ""
+msgstr "Configuration globale"
 
 #: models.py:26
 msgid "Global Configs"
-msgstr ""
+msgstr "Configurations globales"
 
 #: models.py:40
 msgid "Short Name"
-msgstr ""
+msgstr "Nom court"
 
 #: models.py:41
 msgid "Ask for information source in checklist?"
-msgstr ""
+msgstr "Demander la source d'information dans la liste de contrôle?"
 
 #: models.py:45
 msgid "Method"
-msgstr ""
+msgstr "Méthode"
 
 #: models.py:57
 msgid "Question Category"
-msgstr ""
+msgstr "Catégorie de questions"
 
 #: models.py:58
 msgid "Questions Categories"
-msgstr ""
+msgstr "Catégories de questions"
 
 #: models.py:88
 msgid "Text"
-msgstr ""
+msgstr "Texte"
 
 #: models.py:89
 msgid "Number"
-msgstr ""
+msgstr "Nombre"
 
 #: models.py:90
 msgid "Boolean"
-msgstr ""
+msgstr "booléen"
 
 #: models.py:91
 msgid "Likert Scale"
-msgstr ""
+msgstr "Échelle de Likert"
 
 #: models.py:95 models.py:232 models.py:241
 msgid "Partner"
-msgstr ""
+msgstr "Partenaire"
 
 #: models.py:96
 msgid "Output"
-msgstr ""
+msgstr "Produit"
 
 #: models.py:97
 msgid "PD/SSFA"
-msgstr ""
+msgstr "PD/SSFA"
 
 #: models.py:100
 msgid "Answer Type"
-msgstr ""
+msgstr "Type de réponse"
 
 #: models.py:101
 msgid "Choices Size"
-msgstr ""
+msgstr "Taille des choix"
 
 #: models.py:102
 msgid "Level"
-msgstr ""
+msgstr "Niveau"
 
 #: models.py:104
 msgid "Category"
-msgstr ""
+msgstr "Catégorie"
 
 #: models.py:105
 msgid "Sections"
-msgstr ""
+msgstr "Sections"
 
 #: models.py:106
 msgid "Question Text"
-msgstr ""
+msgstr "Texte des questions"
 
 #: models.py:107
 msgid "Count as HACT"
-msgstr ""
+msgstr "Compter comme HACT"
 
 #: models.py:108
 msgid "Is Custom"
-msgstr ""
+msgstr "Est personnalisé"
 
 #: models.py:109
 msgid "Is Active"
-msgstr ""
+msgstr "Est actif"
 
 #: models.py:114 models.py:151
 msgid "Question"
-msgstr ""
+msgstr "Question"
 
 #: models.py:115
 msgid "Questions"
-msgstr ""
+msgstr "Questions"
 
 #: models.py:152
 msgid "Label"
-msgstr ""
+msgstr "Étiquette"
 
 #: models.py:155
 msgid "Value"
-msgstr ""
+msgstr "Valeur"
 
 #: models.py:158 models.py:159
 msgid "Option"
-msgstr ""
+msgstr "Option"
 
 #: models.py:175
 msgid "Parent Location"
-msgstr ""
+msgstr "Emplacement parent"
 
 #: models.py:182
 msgid "P Code"
-msgstr ""
+msgstr "P Code"
 
 #: models.py:188
 msgid "Point"
-msgstr ""
+msgstr "Point"
 
 #: models.py:194
 msgid "Location Site"
-msgstr ""
+msgstr "Site de localisation"
 
 #: models.py:195
 msgid "Location Sites"
-msgstr ""
+msgstr "Sites de localisation"
 
 #: models.py:231 models.py:239
 msgid "CP Output"
-msgstr ""
+msgstr "Produit CP"
 
 #: models.py:233
 msgid "Location/Site"
-msgstr ""
+msgstr "Localisation/Site"
 
 #: models.py:237
 msgid "Issue Raised By"
-msgstr ""
+msgstr "Problème soulevé par"
 
 #: models.py:243
 msgid "Location"
-msgstr ""
+msgstr "Localisation"
 
 #: models.py:248
 msgid "Issue For Attention/Probing"
-msgstr ""
+msgstr "Sujet d'attention/approfondir"
 
 #: models.py:256
 msgid "Log Issue"
-msgstr ""
+msgstr "Problème de log"
 
 #: models.py:257
 msgid "Log Issues"
-msgstr ""
+msgstr "Problèmes de log"
 
 #: models.py:268
 msgid "Related object not provided"
-msgstr ""
+msgstr "Objet connexe non fourni"
 
 #: models.py:271
 msgid "Maximum one related object should be provided"
-msgstr ""
+msgstr "Un seul objet connexe doit être fourni au maximum"
 
 #: serializers.py:131
 msgid "Inactive"
-msgstr ""
+msgstr "Inactif"
 
 #: serializers.py:188
 msgid "Issue Closed By"
-msgstr ""
+msgstr "Question fermée par"
 
 #: serializers.py:190
 msgid "Issue Related To"
-msgstr ""
+msgstr "Question liée à"
 
 #: views.py:107
 msgid "Site Specific Locations"
-msgstr ""
+msgstr "Sites spécifiques"
