--- a/src/etools/applications/field_monitoring/data_collection/locale/ar/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/data_collection/locale/ar/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-27 09:58+0000\n"
+"POT-Creation-Date: 2022-12-28 09:43+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -21,153 +21,153 @@ msgstr ""
 
 #: models.py:25 models.py:49 models.py:135 models.py:182
 msgid "Activity"
-msgstr ""
+msgstr "نشاط"
 
 #: models.py:27
 msgid "Question"
-msgstr ""
+msgstr "سؤال"
 
 #: models.py:31
 msgid "Question Text"
-msgstr ""
+msgstr "نص السؤال"
 
 #: models.py:32
 msgid "Count as HACT"
-msgstr ""
+msgstr "عد على أنها HACT"
 
 #: models.py:34
 msgid "Specific Details To Probe"
-msgstr ""
+msgstr "تفاصيل محددة للتحقيق"
 
 #: models.py:35
 msgid "Enabled"
-msgstr ""
+msgstr "ممكن"
 
 #: models.py:40 models.py:113
 msgid "Activity Question"
-msgstr ""
+msgstr "سؤال النشاط"
 
 #: models.py:41
 msgid "Activity Questions"
-msgstr ""
+msgstr "أسئلة النشاط"
 
 #: models.py:51
 msgid "Methods"
-msgstr ""
+msgstr "أساليب"
 
 #: models.py:52
 msgid "Information Source"
-msgstr ""
+msgstr "مصدر المعلومات"
 
 #: models.py:53
 msgid "Author"
-msgstr ""
+msgstr "مؤلف"
 
 #: models.py:57
 msgid "Started Checklist"
-msgstr ""
+msgstr "بدأت قائمة التحقق"
 
 #: models.py:58
 msgid "Started Checklists"
-msgstr ""
+msgstr "بدأت قوائم المراجعة"
 
 #: models.py:110 models.py:157
 msgid "Checklist"
-msgstr ""
+msgstr "قائمة تدقيق"
 
 #: models.py:114 models.py:136
 msgid "Value"
-msgstr ""
+msgstr "قيمة"
 
 #: models.py:119
 msgid "Checklist Finding"
-msgstr ""
+msgstr "البحث عن قائمة التحقق"
 
 #: models.py:120
 msgid "Checklist Findings"
-msgstr ""
+msgstr "نتائج قائمة التحقق"
 
 #: models.py:139
 msgid "Overall Activity Question Finding"
-msgstr ""
+msgstr "إجمالي نشاط البحث عن الأسئلة"
 
 #: models.py:140
 msgid "Overall Activity Question Findings"
-msgstr ""
+msgstr "نتائج أسئلة النشاط العام"
 
 #: models.py:158 models.py:183
 msgid "Narrative Finding"
-msgstr ""
+msgstr "اكتشاف السرد"
 
 #: models.py:159
 msgid "Attachments"
-msgstr ""
+msgstr "المرفقات"
 
 #: models.py:164
 msgid "Checklist Overall Finding"
-msgstr ""
+msgstr "قائمة التحقق الشاملة"
 
 #: models.py:165
 msgid "Checklist Overall Findings"
-msgstr ""
+msgstr "النتائج العامة قائمة التحقق"
 
 #: models.py:189
 msgid "Activity Overall Finding"
-msgstr ""
+msgstr "الاكتشاف العام للنشاط"
 
 #: models.py:190
 msgid "Activity Overall Findings"
-msgstr ""
+msgstr "النتائج العامة للنشاط"
 
 #: offline/blueprint.py:48
 msgid "Source of Information"
-msgstr ""
+msgstr "مصدر المعلومات"
 
 #: offline/blueprint.py:70
 msgid "Overall Finding"
-msgstr ""
+msgstr "النتيجة الشاملة"
 
 #: offline/helpers.py:55
 #, python-format
 msgid "Unable to find %(level)s with id %(target_id)s"
-msgstr ""
+msgstr "تعذر العثور على %(level)s بالمعرف %(target_id)s"
 
 #: offline/helpers.py:74
 #, python-format
 msgid ""
 "Unable to find finding for question %(question_id)s for %(level)s "
 "%(target_id)s"
-msgstr ""
+msgstr "تعذر العثور على السؤا %(question_id)s لـ %(level)s %(target_id)s"
 
 #: offline/helpers.py:91
 msgid "Ensure this field has no more than 100 characters."
-msgstr ""
+msgstr "تأكد من أن هذا الحقل لا يحتوي على أكثر من 100 حرف."
 
 #: serializers.py:79
 msgid "Document Type"
-msgstr ""
+msgstr "نوع الوثيقة"
 
 #: serializers.py:102
 msgid "Information source is required"
-msgstr ""
+msgstr "مطلوب مصدر المعلومات"
 
 #: views.py:84
 #, python-format
 msgid "Workspace code provided is not a valid business_area_code: %s"
-msgstr ""
+msgstr "رمز مساحة العمل الذي تم توفيره ليس رمز منطقة_عمل صالحًا :%s"
 
 #: views.py:92
 msgid "Workspace is required"
-msgstr ""
+msgstr "مساحة العمل مطلوبة"
 
 #: views.py:102
 msgid "User is required"
-msgstr ""
+msgstr "المستخدم مطلوب"
 
 #: views.py:114
 msgid "Unable to fill checklists for current activity"
-msgstr ""
+msgstr "غير قادر على ملء قوائم المراجعة للنشاط الحالي"
 
 #: views.py:136
 msgid "Report Attachments"
-msgstr ""
+msgstr "تقرير المرفقات"
