--- a/src/etools/applications/field_monitoring/data_collection/locale/es/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/data_collection/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-27 09:58+0000\n"
+"POT-Creation-Date: 2022-12-28 09:43+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -20,116 +20,116 @@ msgstr ""
 
 #: models.py:25 models.py:49 models.py:135 models.py:182
 msgid "Activity"
-msgstr ""
+msgstr "Actividad"
 
 #: models.py:27
 msgid "Question"
-msgstr ""
+msgstr "Pregunta"
 
 #: models.py:31
 msgid "Question Text"
-msgstr ""
+msgstr "Texto de la pregunta"
 
 #: models.py:32
 msgid "Count as HACT"
-msgstr ""
+msgstr "Contar como HACT"
 
 #: models.py:34
 msgid "Specific Details To Probe"
-msgstr ""
+msgstr "Detalles específicos para sondear"
 
 #: models.py:35
 msgid "Enabled"
-msgstr ""
+msgstr "Activado"
 
 #: models.py:40 models.py:113
 msgid "Activity Question"
-msgstr ""
+msgstr "Pregunta de actividad"
 
 #: models.py:41
 msgid "Activity Questions"
-msgstr ""
+msgstr "Preguntas de actividad"
 
 #: models.py:51
 msgid "Methods"
-msgstr ""
+msgstr "Métodos"
 
 #: models.py:52
 msgid "Information Source"
-msgstr ""
+msgstr "Fuente de información"
 
 #: models.py:53
 msgid "Author"
-msgstr ""
+msgstr "Autor"
 
 #: models.py:57
 msgid "Started Checklist"
-msgstr ""
+msgstr "Lista de verificación iniciada"
 
 #: models.py:58
 msgid "Started Checklists"
-msgstr ""
+msgstr "Listas de verificación iniciadas"
 
 #: models.py:110 models.py:157
 msgid "Checklist"
-msgstr ""
+msgstr "Lista de Verificación"
 
 #: models.py:114 models.py:136
 msgid "Value"
-msgstr ""
+msgstr "Valor"
 
 #: models.py:119
 msgid "Checklist Finding"
-msgstr ""
+msgstr "Hallazgo de lista de verificación"
 
 #: models.py:120
 msgid "Checklist Findings"
-msgstr ""
+msgstr "Hallazgos de la lista de verificación"
 
 #: models.py:139
 msgid "Overall Activity Question Finding"
-msgstr ""
+msgstr "Resultado general de la pregunta de actividad"
 
 #: models.py:140
 msgid "Overall Activity Question Findings"
-msgstr ""
+msgstr "Resultados generales de la pregunta de actividad"
 
 #: models.py:158 models.py:183
 msgid "Narrative Finding"
-msgstr ""
+msgstr "Hallazgo narrativo"
 
 #: models.py:159
 msgid "Attachments"
-msgstr ""
+msgstr "Archivos adjuntos"
 
 #: models.py:164
 msgid "Checklist Overall Finding"
-msgstr ""
+msgstr "Lista de verificación Hallazgo general"
 
 #: models.py:165
 msgid "Checklist Overall Findings"
-msgstr ""
+msgstr "Hallazgos generales de la lista de verificación"
 
 #: models.py:189
 msgid "Activity Overall Finding"
-msgstr ""
+msgstr "Hallazgo general de la actividad"
 
 #: models.py:190
 msgid "Activity Overall Findings"
-msgstr ""
+msgstr "Actividad Hallazgos generales"
 
 #: offline/blueprint.py:48
 msgid "Source of Information"
-msgstr ""
+msgstr "Fuente de información"
 
 #: offline/blueprint.py:70
 msgid "Overall Finding"
-msgstr ""
+msgstr "Hallazgo general"
 
 #: offline/helpers.py:55
 #, python-format
 msgid "Unable to find %(level)s with id %(target_id)s"
-msgstr ""
+msgstr "No se puede encontrar %(level)s con id %(target_id)s"
 
 #: offline/helpers.py:74
 #, python-format
@@ -137,36 +137,41 @@ msgid ""
 "Unable to find finding for question %(question_id)s for %(level)s "
 "%(target_id)s"
 msgstr ""
+"No se pudo encontrar el resultado de la pregunta %(question_id)s para "
+"%(level)s %(target_id)s"
 
 #: offline/helpers.py:91
 msgid "Ensure this field has no more than 100 characters."
-msgstr ""
+msgstr "Asegúrese de que este campo no tenga más de 100 caracteres."
 
 #: serializers.py:79
 msgid "Document Type"
-msgstr ""
+msgstr "Tipo de Documento"
 
 #: serializers.py:102
 msgid "Information source is required"
-msgstr ""
+msgstr "Se requiere fuente de información"
 
 #: views.py:84
 #, python-format
 msgid "Workspace code provided is not a valid business_area_code: %s"
 msgstr ""
+"El código de espacio de trabajo proporcionado no es un "
+"código_de_área_de_negocio válido: %s"
 
 #: views.py:92
 msgid "Workspace is required"
-msgstr ""
+msgstr "Se requiere espacio de trabajo"
 
 #: views.py:102
 msgid "User is required"
-msgstr ""
+msgstr "Se requiere usuario"
 
 #: views.py:114
 msgid "Unable to fill checklists for current activity"
 msgstr ""
+"No se pueden completar las listas de verificación para la actividad actual"
 
 #: views.py:136
 msgid "Report Attachments"
-msgstr ""
+msgstr "Adjuntos del informe"
