--- a/src/etools/applications/field_monitoring/data_collection/locale/ro/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/data_collection/locale/ro/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-27 09:58+0000\n"
+"POT-Creation-Date: 2022-12-28 09:43+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -21,116 +21,116 @@ msgstr ""
 
 #: models.py:25 models.py:49 models.py:135 models.py:182
 msgid "Activity"
-msgstr ""
+msgstr "Activitate"
 
 #: models.py:27
 msgid "Question"
-msgstr ""
+msgstr "Întrebare"
 
 #: models.py:31
 msgid "Question Text"
-msgstr ""
+msgstr "Textul întrebării"
 
 #: models.py:32
 msgid "Count as HACT"
-msgstr ""
+msgstr "Numarați ca HACT"
 
 #: models.py:34
 msgid "Specific Details To Probe"
-msgstr ""
+msgstr "Detalii specifice de sondat"
 
 #: models.py:35
 msgid "Enabled"
-msgstr ""
+msgstr "Activat"
 
 #: models.py:40 models.py:113
 msgid "Activity Question"
-msgstr ""
+msgstr "Întrebare despre activitate"
 
 #: models.py:41
 msgid "Activity Questions"
-msgstr ""
+msgstr "Întrebări despre activitate"
 
 #: models.py:51
 msgid "Methods"
-msgstr ""
+msgstr "Metode"
 
 #: models.py:52
 msgid "Information Source"
-msgstr ""
+msgstr "Sursa de informatie"
 
 #: models.py:53
 msgid "Author"
-msgstr ""
+msgstr "Autor"
 
 #: models.py:57
 msgid "Started Checklist"
-msgstr ""
+msgstr "Lista de verificare începută"
 
 #: models.py:58
 msgid "Started Checklists"
-msgstr ""
+msgstr "Liste de verificare începute"
 
 #: models.py:110 models.py:157
 msgid "Checklist"
-msgstr ""
+msgstr "Lista de verificare"
 
 #: models.py:114 models.py:136
 msgid "Value"
-msgstr ""
+msgstr "Valoare"
 
 #: models.py:119
 msgid "Checklist Finding"
-msgstr ""
+msgstr "Concluzia listei de verificare"
 
 #: models.py:120
 msgid "Checklist Findings"
-msgstr ""
+msgstr "Concluziile listei de verificare"
 
 #: models.py:139
 msgid "Overall Activity Question Finding"
-msgstr ""
+msgstr "Concluzia generală a întrebării despre activitate"
 
 #: models.py:140
 msgid "Overall Activity Question Findings"
-msgstr ""
+msgstr "Concluziile generale ale întrebării despre activitate"
 
 #: models.py:158 models.py:183
 msgid "Narrative Finding"
-msgstr ""
+msgstr "Concluzia narativă"
 
 #: models.py:159
 msgid "Attachments"
-msgstr ""
+msgstr "Atasamente"
 
 #: models.py:164
 msgid "Checklist Overall Finding"
-msgstr ""
+msgstr "Concluzia generală a listei de verificare"
 
 #: models.py:165
 msgid "Checklist Overall Findings"
-msgstr ""
+msgstr "Concluziile generale ale listei de verificare"
 
 #: models.py:189
 msgid "Activity Overall Finding"
-msgstr ""
+msgstr "Concluzia generală a activității"
 
 #: models.py:190
 msgid "Activity Overall Findings"
-msgstr ""
+msgstr "Concluziile generale ale activității"
 
 #: offline/blueprint.py:48
 msgid "Source of Information"
-msgstr ""
+msgstr "Sursă de informații"
 
 #: offline/blueprint.py:70
 msgid "Overall Finding"
-msgstr ""
+msgstr "Concluzia generală"
 
 #: offline/helpers.py:55
 #, python-format
 msgid "Unable to find %(level)s with id %(target_id)s"
-msgstr ""
+msgstr "Nu s-a putut găsi %(level)s cu id %(target_id)s"
 
 #: offline/helpers.py:74
 #, python-format
@@ -138,36 +138,39 @@ msgid ""
 "Unable to find finding for question %(question_id)s for %(level)s "
 "%(target_id)s"
 msgstr ""
+"Nu s-a găsit concluzia pentru întrebarea %(question_id)s pentru %(level)s "
+"%(target_id)s"
 
 #: offline/helpers.py:91
 msgid "Ensure this field has no more than 100 characters."
-msgstr ""
+msgstr "Asigurați-vă că acest câmp nu are mai mult de 100 de caractere."
 
 #: serializers.py:79
 msgid "Document Type"
-msgstr ""
+msgstr "Tipul documentului"
 
 #: serializers.py:102
 msgid "Information source is required"
-msgstr ""
+msgstr "Sursa de informații este necesară"
 
 #: views.py:84
 #, python-format
 msgid "Workspace code provided is not a valid business_area_code: %s"
 msgstr ""
+"Codul spațiului de lucru furnizat nu este un business_area_code valid: %s"
 
 #: views.py:92
 msgid "Workspace is required"
-msgstr ""
+msgstr "Este necesar un spațiu de lucru"
 
 #: views.py:102
 msgid "User is required"
-msgstr ""
+msgstr "Utilizatorul este necesar"
 
 #: views.py:114
 msgid "Unable to fill checklists for current activity"
-msgstr ""
+msgstr "Nu se pot completa listele de verificare pentru activitatea curentă"
 
 #: views.py:136
 msgid "Report Attachments"
-msgstr ""
+msgstr "Atașamente de raport"
