--- a/src/etools/applications/field_monitoring/fm_settings/locale/es/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/fm_settings/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-27 09:27+0000\n"
+"POT-Creation-Date: 2022-12-28 09:02+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -20,256 +20,256 @@ msgstr ""
 
 #: admin.py:39 models.py:46 models.py:103
 msgid "Methods"
-msgstr ""
+msgstr "Métodos"
 
 #: export/renderers.py:14
 msgid "Site ID"
-msgstr ""
+msgstr "ID del sitio"
 
 #: export/renderers.py:20
-msgid "Admin {} - Name"
-msgstr ""
+msgid "Admin %s - Name"
+msgstr "Admin %s - Nombre"
 
 #: export/renderers.py:21
-msgid "Admin {} - Type"
-msgstr ""
+msgid "Admin %s - Type"
+msgstr "Admin %s - Tipo"
 
 #: export/renderers.py:22
-msgid "Admin {} - Pcode"
-msgstr ""
+msgid "Admin %s - Pcode"
+msgstr "Admin %s - Pcode"
 
 #: export/renderers.py:26 models.py:245
 msgid "Site"
-msgstr ""
+msgstr "Página web"
 
 #: export/renderers.py:27
 msgid "Lat"
-msgstr ""
+msgstr "Lat"
 
 #: export/renderers.py:28
 msgid "Long"
-msgstr ""
+msgstr "Largo"
 
 #: export/renderers.py:29 models.py:189 serializers.py:130
 msgid "Active"
-msgstr ""
+msgstr "Activo"
 
 #: export/renderers.py:40
 msgid "Related To"
-msgstr ""
+msgstr "Relacionado"
 
 #: export/renderers.py:41 models.py:39 models.py:54 models.py:180
 msgid "Name"
-msgstr ""
+msgstr "Nombre"
 
 #: export/renderers.py:42
 msgid "Issue for Attention"
-msgstr ""
+msgstr "Tema de atención"
 
 #: export/renderers.py:43 serializers.py:132
 msgid "Status"
-msgstr ""
+msgstr "Estado"
 
 #: export/renderers.py:44 models.py:251 views.py:206
 msgid "Attachments"
-msgstr ""
+msgstr "Archivos adjuntos"
 
 #: models.py:22 views.py:76
 msgid "Global Attachments"
-msgstr ""
+msgstr "Anexos globales"
 
 #: models.py:25
 msgid "Global Config"
-msgstr ""
+msgstr "Configuración global"
 
 #: models.py:26
 msgid "Global Configs"
-msgstr ""
+msgstr "Configuración global"
 
 #: models.py:40
 msgid "Short Name"
-msgstr ""
+msgstr "Nombre corto"
 
 #: models.py:41
 msgid "Ask for information source in checklist?"
-msgstr ""
+msgstr "¿Pedir la fuente de información en la lista de control?"
 
 #: models.py:45
 msgid "Method"
-msgstr ""
+msgstr "Método"
 
 #: models.py:57
 msgid "Question Category"
-msgstr ""
+msgstr "Categoría de preguntas"
 
 #: models.py:58
 msgid "Questions Categories"
-msgstr ""
+msgstr "Categorías de preguntas"
 
 #: models.py:88
 msgid "Text"
-msgstr ""
+msgstr "Texto"
 
 #: models.py:89
 msgid "Number"
-msgstr ""
+msgstr "Número"
 
 #: models.py:90
 msgid "Boolean"
-msgstr ""
+msgstr "Booleano"
 
 #: models.py:91
 msgid "Likert Scale"
-msgstr ""
+msgstr "Escala Likert"
 
 #: models.py:95 models.py:232 models.py:241
 msgid "Partner"
-msgstr ""
+msgstr "Socio"
 
 #: models.py:96
 msgid "Output"
-msgstr ""
+msgstr "Salida"
 
 #: models.py:97
 msgid "PD/SPD"
-msgstr ""
+msgstr "PD/SPD"
 
 #: models.py:100
 msgid "Answer Type"
-msgstr ""
+msgstr "Tipo de respuesta"
 
 #: models.py:101
 msgid "Choices Size"
-msgstr ""
+msgstr "Opciones Tamaño"
 
 #: models.py:102
 msgid "Level"
-msgstr ""
+msgstr "Nivel"
 
 #: models.py:104
 msgid "Category"
-msgstr ""
+msgstr "Categoría"
 
 #: models.py:105
 msgid "Sections"
-msgstr ""
+msgstr "Secciones"
 
 #: models.py:106
 msgid "Question Text"
-msgstr ""
+msgstr "Texto de la pregunta"
 
 #: models.py:107
 msgid "Count as HACT"
-msgstr ""
+msgstr "Cuenta como HACT"
 
 #: models.py:108
 msgid "Is Custom"
-msgstr ""
+msgstr "Está personalizado"
 
 #: models.py:109
 msgid "Is Active"
-msgstr ""
+msgstr "Está activo"
 
 #: models.py:114 models.py:151
 msgid "Question"
-msgstr ""
+msgstr "Pregunta"
 
 #: models.py:115
 msgid "Questions"
-msgstr ""
+msgstr "Preguntas"
 
 #: models.py:152
 msgid "Label"
-msgstr ""
+msgstr "Etiqueta"
 
 #: models.py:155
 msgid "Value"
-msgstr ""
+msgstr "Valor"
 
 #: models.py:158 models.py:159
 msgid "Option"
-msgstr ""
+msgstr "Opción"
 
 #: models.py:175
 msgid "Parent Location"
-msgstr ""
+msgstr "Ubicación de los padres"
 
 #: models.py:182
 msgid "P Code"
-msgstr ""
+msgstr "Código P"
 
 #: models.py:188
 msgid "Point"
-msgstr ""
+msgstr "Punto"
 
 #: models.py:194
 msgid "Location Site"
-msgstr ""
+msgstr "Ubicación"
 
 #: models.py:195
 msgid "Location Sites"
-msgstr ""
+msgstr "Emplazamientos"
 
 #: models.py:231 models.py:239
 msgid "CP Output"
-msgstr ""
+msgstr "Salida CP"
 
 #: models.py:233
 msgid "Location/Site"
-msgstr ""
+msgstr "Localización"
 
 #: models.py:237
 msgid "Issue Raised By"
-msgstr ""
+msgstr "Cuestión planteada por"
 
 #: models.py:243
 msgid "Location"
-msgstr ""
+msgstr "Ubicación"
 
 #: models.py:248
 msgid "Issue For Attention/Probing"
-msgstr ""
+msgstr "Cuestión de atención"
 
 #: models.py:256
 msgid "Log Issue"
-msgstr ""
+msgstr "Problema de registro"
 
 #: models.py:257
 msgid "Log Issues"
-msgstr ""
+msgstr "Problemas de registro"
 
 #: models.py:268
 msgid "Related object not provided"
-msgstr ""
+msgstr "Objeto relacionado no proporcionado"
 
 #: models.py:271
 msgid "Maximum one related object should be provided"
-msgstr ""
+msgstr "Debe proporcionarse como máximo un objeto relacionado"
 
 #: serializers.py:85
 msgid "HACT questions can only be related at the Partner Organization Level"
-msgstr ""
+msgstr "Las preguntas HACT sólo pueden relacionarse a nivel de la Organización Asociada"
 
 #: serializers.py:88
 msgid "Only one hact question can be active at any time."
-msgstr ""
+msgstr "Sólo puede haber una pregunta hact activa en cada momento."
 
 #: serializers.py:102
 msgid "The system provided questions cannot be edited."
-msgstr ""
+msgstr "Las preguntas proporcionadas por el sistema no pueden editarse."
 
 #: serializers.py:131
 msgid "Inactive"
-msgstr ""
+msgstr "Inactivo"
 
 #: serializers.py:188
 msgid "Issue Closed By"
-msgstr ""
+msgstr "Asunto cerrado por"
 
 #: serializers.py:190
 msgid "Issue Related To"
-msgstr ""
+msgstr "Asunto relacionado con"
 
 #: views.py:110
 msgid "Site Specific Locations"
-msgstr ""
+msgstr "Emplazamientos específicos"
