--- a/src/etools/applications/field_monitoring/fm_settings/locale/fr/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/fm_settings/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-27 09:27+0000\n"
+"POT-Creation-Date: 2022-12-28 09:02+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -27,16 +27,16 @@ msgid "Site ID"
 msgstr "ID du Site"
 
 #: export/renderers.py:20
-msgid "Admin {} - Name"
-msgstr "Admin {} - Nom"
+msgid "Admin %s - Name"
+msgstr "Admin %s - Nom"
 
 #: export/renderers.py:21
-msgid "Admin {} - Type"
-msgstr "Admin {} - Type"
+msgid "Admin %s - Type"
+msgstr "Admin %s - Type"
 
 #: export/renderers.py:22
-msgid "Admin {} - Pcode"
-msgstr "Admin {} - Pcode"
+msgid "Admin %s - Pcode"
+msgstr "Admin %s - Pcode"
 
 #: export/renderers.py:26 models.py:245
 msgid "Site"
@@ -44,7 +44,7 @@ msgstr "Site"
 
 #: export/renderers.py:27
 msgid "Lat"
-msgstr ""
+msgstr "Lat"
 
 #: export/renderers.py:28
 msgid "Long"
@@ -131,8 +131,8 @@ msgid "Output"
 msgstr "Produit"
 
 #: models.py:97
-msgid "PD/SSFA"
-msgstr "PD/SSFA"
+msgid "PD/SPD"
+msgstr ""
 
 #: models.py:100
 msgid "Answer Type"
@@ -248,15 +248,15 @@ msgstr "Un seul objet connexe doit être fourni au maximum"
 
 #: serializers.py:85
 msgid "HACT questions can only be related at the Partner Organization Level"
-msgstr ""
+msgstr "Les questions de HACT ne peuvent être liées qu'au niveau de l'organisation partenaire."
 
 #: serializers.py:88
 msgid "Only one hact question can be active at any time."
-msgstr ""
+msgstr "Une seule question de hact peut être active à la fois."
 
 #: serializers.py:102
 msgid "The system provided questions cannot be edited."
-msgstr ""
+msgstr "Les questions fournies par le système ne peuvent pas être modifiées."
 
 #: serializers.py:131
 msgid "Inactive"
