--- a/src/etools/applications/field_monitoring/fm_settings/locale/ro/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/fm_settings/locale/ro/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-27 09:27+0000\n"
+"POT-Creation-Date: 2022-12-28 09:02+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -21,23 +21,26 @@ msgstr ""
 
 #: admin.py:39 models.py:46 models.py:103
 msgid "Methods"
-msgstr ""
+msgstr "Metode"
 
 #: export/renderers.py:14
 msgid "Site ID"
-msgstr ""
+msgstr "ID-ul site-ului"
 
 #: export/renderers.py:20
-msgid "Admin {} - Name"
-msgstr ""
+#, python-format
+msgid "Admin %s - Name"
+msgstr "Admin %s - Nume"
 
 #: export/renderers.py:21
-msgid "Admin {} - Type"
-msgstr ""
+#, python-format
+msgid "Admin %s - Type"
+msgstr "Admin %s - Tip"
 
 #: export/renderers.py:22
-msgid "Admin {} - Pcode"
-msgstr ""
+#, python-format
+msgid "Admin %s - Pcode"
+msgstr "Admin %s - Pcode"
 
 #: export/renderers.py:26 models.py:245
 msgid "Site"
@@ -45,67 +48,67 @@ msgstr ""
 
 #: export/renderers.py:27
 msgid "Lat"
-msgstr ""
+msgstr "Latitudine"
 
 #: export/renderers.py:28
 msgid "Long"
-msgstr ""
+msgstr "Longitudine"
 
 #: export/renderers.py:29 models.py:189 serializers.py:130
 msgid "Active"
-msgstr ""
+msgstr "Activ"
 
 #: export/renderers.py:40
 msgid "Related To"
-msgstr ""
+msgstr "Legat de"
 
 #: export/renderers.py:41 models.py:39 models.py:54 models.py:180
 msgid "Name"
-msgstr ""
+msgstr "Nume"
 
 #: export/renderers.py:42
 msgid "Issue for Attention"
-msgstr ""
+msgstr "Problemă pentru atenție"
 
 #: export/renderers.py:43 serializers.py:132
 msgid "Status"
-msgstr ""
+msgstr "Stare"
 
 #: export/renderers.py:44 models.py:251 views.py:206
 msgid "Attachments"
-msgstr ""
+msgstr "Atașamente"
 
 #: models.py:22 views.py:76
 msgid "Global Attachments"
-msgstr ""
+msgstr "Atașamente globale"
 
 #: models.py:25
 msgid "Global Config"
-msgstr ""
+msgstr "Configurare globală"
 
 #: models.py:26
 msgid "Global Configs"
-msgstr ""
+msgstr "Configurații globale"
 
 #: models.py:40
 msgid "Short Name"
-msgstr ""
+msgstr "Nume scurt"
 
 #: models.py:41
 msgid "Ask for information source in checklist?"
-msgstr ""
+msgstr "Cereți sursa de informații în lista de verificare?"
 
 #: models.py:45
 msgid "Method"
-msgstr ""
+msgstr "Metoda"
 
 #: models.py:57
 msgid "Question Category"
-msgstr ""
+msgstr "Categoria de întrebări"
 
 #: models.py:58
 msgid "Questions Categories"
-msgstr ""
+msgstr "Categorii de întrebări"
 
 #: models.py:88
 msgid "Text"
@@ -113,7 +116,7 @@ msgstr ""
 
 #: models.py:89
 msgid "Number"
-msgstr ""
+msgstr "Numărul"
 
 #: models.py:90
 msgid "Boolean"
@@ -121,15 +124,15 @@ msgstr ""
 
 #: models.py:91
 msgid "Likert Scale"
-msgstr ""
+msgstr "Scara Likert"
 
 #: models.py:95 models.py:232 models.py:241
 msgid "Partner"
-msgstr ""
+msgstr "Partener"
 
 #: models.py:96
 msgid "Output"
-msgstr ""
+msgstr "Ieșire"
 
 #: models.py:97
 msgid "PD/SPD"
@@ -137,140 +140,140 @@ msgstr ""
 
 #: models.py:100
 msgid "Answer Type"
-msgstr ""
+msgstr "Tip de răspuns"
 
 #: models.py:101
 msgid "Choices Size"
-msgstr ""
+msgstr "Dimensiunea alegerilor"
 
 #: models.py:102
 msgid "Level"
-msgstr ""
+msgstr "Nivel"
 
 #: models.py:104
 msgid "Category"
-msgstr ""
+msgstr "Categorie"
 
 #: models.py:105
 msgid "Sections"
-msgstr ""
+msgstr "Secțiuni"
 
 #: models.py:106
 msgid "Question Text"
-msgstr ""
+msgstr "Textul întrebării"
 
 #: models.py:107
 msgid "Count as HACT"
-msgstr ""
+msgstr "Contează ca HACT"
 
 #: models.py:108
 msgid "Is Custom"
-msgstr ""
+msgstr "Este personalizat"
 
 #: models.py:109
 msgid "Is Active"
-msgstr ""
+msgstr "Este activ"
 
 #: models.py:114 models.py:151
 msgid "Question"
-msgstr ""
+msgstr "Întrebare"
 
 #: models.py:115
 msgid "Questions"
-msgstr ""
+msgstr "Întrebări"
 
 #: models.py:152
 msgid "Label"
-msgstr ""
+msgstr "Etichetă"
 
 #: models.py:155
 msgid "Value"
-msgstr ""
+msgstr "Valoare"
 
 #: models.py:158 models.py:159
 msgid "Option"
-msgstr ""
+msgstr "Opțiune"
 
 #: models.py:175
 msgid "Parent Location"
-msgstr ""
+msgstr "Locația părintelui"
 
 #: models.py:182
 msgid "P Code"
-msgstr ""
+msgstr "P Cod"
 
 #: models.py:188
 msgid "Point"
-msgstr ""
+msgstr "Punct"
 
 #: models.py:194
 msgid "Location Site"
-msgstr ""
+msgstr "Locația site-ului"
 
 #: models.py:195
 msgid "Location Sites"
-msgstr ""
+msgstr "Locația site-urilor"
 
 #: models.py:231 models.py:239
 msgid "CP Output"
-msgstr ""
+msgstr "Ieșire CP"
 
 #: models.py:233
 msgid "Location/Site"
-msgstr ""
+msgstr "Locație/Site"
 
 #: models.py:237
 msgid "Issue Raised By"
-msgstr ""
+msgstr "Problemă ridicată de"
 
 #: models.py:243
 msgid "Location"
-msgstr ""
+msgstr "Locație"
 
 #: models.py:248
 msgid "Issue For Attention/Probing"
-msgstr ""
+msgstr "Problemă pentru atenție/sondare"
 
 #: models.py:256
 msgid "Log Issue"
-msgstr ""
+msgstr "Problemă de jurnal"
 
 #: models.py:257
 msgid "Log Issues"
-msgstr ""
+msgstr "Probleme de jurnal"
 
 #: models.py:268
 msgid "Related object not provided"
-msgstr ""
+msgstr "Obiect înrudit nu este furnizat"
 
 #: models.py:271
 msgid "Maximum one related object should be provided"
-msgstr ""
+msgstr "Ar trebui furnizat maximum un obiect asociat"
 
 #: serializers.py:85
 msgid "HACT questions can only be related at the Partner Organization Level"
-msgstr ""
+msgstr "Întrebările HACT pot fi legate numai la nivel de organizație parteneră"
 
 #: serializers.py:88
 msgid "Only one hact question can be active at any time."
-msgstr ""
+msgstr "Doar o singură întrebare hact poate fi activă în orice moment."
 
 #: serializers.py:102
 msgid "The system provided questions cannot be edited."
-msgstr ""
+msgstr "Întrebările furnizate de sistem nu pot fi editate."
 
 #: serializers.py:131
 msgid "Inactive"
-msgstr ""
+msgstr "Inactiv"
 
 #: serializers.py:188
 msgid "Issue Closed By"
-msgstr ""
+msgstr "Problemă închisă de"
 
 #: serializers.py:190
 msgid "Issue Related To"
-msgstr ""
+msgstr "Problemă legată de"
 
 #: views.py:110
 msgid "Site Specific Locations"
-msgstr ""
+msgstr "Locații specifice site-ului"
