--- a/src/etools/applications/field_monitoring/fm_settings/locale/ru/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/fm_settings/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-27 09:27+0000\n"
+"POT-Creation-Date: 2022-12-28 09:02+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -22,256 +22,256 @@ msgstr ""
 
 #: admin.py:39 models.py:46 models.py:103
 msgid "Methods"
-msgstr ""
+msgstr "Методы"
 
 #: export/renderers.py:14
 msgid "Site ID"
-msgstr ""
+msgstr "Идентификатор сайта"
 
 #: export/renderers.py:20
-msgid "Admin {} - Name"
-msgstr ""
+msgid "Admin %s - Name"
+msgstr "Админ %s - Имя"
 
 #: export/renderers.py:21
-msgid "Admin {} - Type"
-msgstr ""
+msgid "Admin %s - Type"
+msgstr "Админ %s - Тип"
 
 #: export/renderers.py:22
-msgid "Admin {} - Pcode"
-msgstr ""
+msgid "Admin %s - Pcode"
+msgstr "Админ %s — Pcode"
 
 #: export/renderers.py:26 models.py:245
 msgid "Site"
-msgstr ""
+msgstr "Сайт"
 
 #: export/renderers.py:27
 msgid "Lat"
-msgstr ""
+msgstr "лат."
 
 #: export/renderers.py:28
 msgid "Long"
-msgstr ""
+msgstr "Длинный"
 
 #: export/renderers.py:29 models.py:189 serializers.py:130
 msgid "Active"
-msgstr ""
+msgstr "Активный"
 
 #: export/renderers.py:40
 msgid "Related To"
-msgstr ""
+msgstr "Относится к"
 
 #: export/renderers.py:41 models.py:39 models.py:54 models.py:180
 msgid "Name"
-msgstr ""
+msgstr "Имя"
 
 #: export/renderers.py:42
 msgid "Issue for Attention"
-msgstr ""
+msgstr "Проблема для внимания"
 
 #: export/renderers.py:43 serializers.py:132
 msgid "Status"
-msgstr ""
+msgstr "Положение дел"
 
 #: export/renderers.py:44 models.py:251 views.py:206
 msgid "Attachments"
-msgstr ""
+msgstr "Вложения"
 
 #: models.py:22 views.py:76
 msgid "Global Attachments"
-msgstr ""
+msgstr "Глобальные вложения"
 
 #: models.py:25
 msgid "Global Config"
-msgstr ""
+msgstr "Глобальная конфигурация"
 
 #: models.py:26
 msgid "Global Configs"
-msgstr ""
+msgstr "Глобальные конфигурации"
 
 #: models.py:40
 msgid "Short Name"
-msgstr ""
+msgstr "Короткое имя"
 
 #: models.py:41
 msgid "Ask for information source in checklist?"
-msgstr ""
+msgstr "Запросить источник информации в контрольном списке?"
 
 #: models.py:45
 msgid "Method"
-msgstr ""
+msgstr "Метод"
 
 #: models.py:57
 msgid "Question Category"
-msgstr ""
+msgstr "Категория вопроса"
 
 #: models.py:58
 msgid "Questions Categories"
-msgstr ""
+msgstr "Категории вопросов"
 
 #: models.py:88
 msgid "Text"
-msgstr ""
+msgstr "Текст"
 
 #: models.py:89
 msgid "Number"
-msgstr ""
+msgstr "Число"
 
 #: models.py:90
 msgid "Boolean"
-msgstr ""
+msgstr "логический"
 
 #: models.py:91
 msgid "Likert Scale"
-msgstr ""
+msgstr "Шкала Лайкерта"
 
 #: models.py:95 models.py:232 models.py:241
 msgid "Partner"
-msgstr ""
+msgstr "Партнер"
 
 #: models.py:96
 msgid "Output"
-msgstr ""
+msgstr "Вывод"
 
 #: models.py:97
 msgid "PD/SPD"
-msgstr ""
+msgstr "ПД/СПД"
 
 #: models.py:100
 msgid "Answer Type"
-msgstr ""
+msgstr "Тип ответа"
 
 #: models.py:101
 msgid "Choices Size"
-msgstr ""
+msgstr "Выбор размера"
 
 #: models.py:102
 msgid "Level"
-msgstr ""
+msgstr "Уровень"
 
 #: models.py:104
 msgid "Category"
-msgstr ""
+msgstr "Категория"
 
 #: models.py:105
 msgid "Sections"
-msgstr ""
+msgstr "Разделы"
 
 #: models.py:106
 msgid "Question Text"
-msgstr ""
+msgstr "Текст вопроса"
 
 #: models.py:107
 msgid "Count as HACT"
-msgstr ""
+msgstr "Считать как HACT"
 
 #: models.py:108
 msgid "Is Custom"
-msgstr ""
+msgstr "Пользовательский"
 
 #: models.py:109
 msgid "Is Active"
-msgstr ""
+msgstr "Активен"
 
 #: models.py:114 models.py:151
 msgid "Question"
-msgstr ""
+msgstr "Вопрос"
 
 #: models.py:115
 msgid "Questions"
-msgstr ""
+msgstr "Вопросы"
 
 #: models.py:152
 msgid "Label"
-msgstr ""
+msgstr "Этикетка"
 
 #: models.py:155
 msgid "Value"
-msgstr ""
+msgstr "Стоимость"
 
 #: models.py:158 models.py:159
 msgid "Option"
-msgstr ""
+msgstr "Вариант"
 
 #: models.py:175
 msgid "Parent Location"
-msgstr ""
+msgstr "Родительское местоположение"
 
 #: models.py:182
 msgid "P Code"
-msgstr ""
+msgstr "P-код"
 
 #: models.py:188
 msgid "Point"
-msgstr ""
+msgstr "Точка"
 
 #: models.py:194
 msgid "Location Site"
-msgstr ""
+msgstr "Местоположение сайта"
 
 #: models.py:195
 msgid "Location Sites"
-msgstr ""
+msgstr "Местонахождение Сайты"
 
 #: models.py:231 models.py:239
 msgid "CP Output"
-msgstr ""
+msgstr "Выход СР"
 
 #: models.py:233
 msgid "Location/Site"
-msgstr ""
+msgstr "Местоположение/сайт"
 
 #: models.py:237
 msgid "Issue Raised By"
-msgstr ""
+msgstr "Проблема поднята"
 
 #: models.py:243
 msgid "Location"
-msgstr ""
+msgstr "Место расположения"
 
 #: models.py:248
 msgid "Issue For Attention/Probing"
-msgstr ""
+msgstr "Проблема для внимания / зондирования"
 
 #: models.py:256
 msgid "Log Issue"
-msgstr ""
+msgstr "Проблема с журналом"
 
 #: models.py:257
 msgid "Log Issues"
-msgstr ""
+msgstr "Проблемы с журналом"
 
 #: models.py:268
 msgid "Related object not provided"
-msgstr ""
+msgstr "Связанный объект не указан"
 
 #: models.py:271
 msgid "Maximum one related object should be provided"
-msgstr ""
+msgstr "Должен быть предоставлен максимум один связанный объект"
 
 #: serializers.py:85
 msgid "HACT questions can only be related at the Partner Organization Level"
-msgstr ""
+msgstr "Вопросы HACT могут быть связаны только на уровне партнерской организации."
 
 #: serializers.py:88
 msgid "Only one hact question can be active at any time."
-msgstr ""
+msgstr "В любой момент времени может быть активен только один вопрос."
 
 #: serializers.py:102
 msgid "The system provided questions cannot be edited."
-msgstr ""
+msgstr "Предоставленные системой вопросы не могут быть отредактированы."
 
 #: serializers.py:131
 msgid "Inactive"
-msgstr ""
+msgstr "Неактивный"
 
 #: serializers.py:188
 msgid "Issue Closed By"
-msgstr ""
+msgstr "Проблема закрыта"
 
 #: serializers.py:190
 msgid "Issue Related To"
-msgstr ""
+msgstr "Проблема, связанная с"
 
 #: views.py:110
 msgid "Site Specific Locations"
-msgstr ""
+msgstr "Места, специфичные для сайта"
